# Scout

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  setup.cfg
.github/workflows/: ci.yml
config/: config.toml.example  review.schema.json
packaging/: scout.service  scout.spec
scripts/: setup.sh
src/scout/: __init__.py  bitbucket.py  claude.py  cli.py  codex.py  comment_request.py  config.py  daemon.py  gitops.py  models.py  prompt.py  provider.py  retention.py  review_plan.py  risk.py  runtime_lock.py  schema.py  state.py  usage.py
src/scout/data/: review.schema.json
tests/: test_bitbucket.py  test_claude.py  test_cli.py  test_codex.py  test_comment_request.py  test_config.py  test_daemon.py  test_gitops.py  test_packaging.py  test_prompt.py  test_provider.py  test_retention.py  test_review_plan.py  test_risk.py  test_runtime_lock.py  test_schema.py  test_setup_script.py  test_state.py  test_usage.py
