[metadata]
name = scout
version = 0.1.0
description = Scout Bitbucket Cloud PR AI review service
long_description = file: README.md
long_description_content_type = text/markdown
author = Scout contributors
license = Apache-2.0
license_files = LICENSE
url = https://github.com/99dsimonp/Scout
project_urls =
    Repository = https://github.com/99dsimonp/Scout
    Issues = https://github.com/99dsimonp/Scout/issues
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    tomli>=1.1.0; python_version < "3.11"

[options.packages.find]
where = src

[options.package_data]
scout =
    data/review.schema.json

[options.entry_points]
console_scripts =
    scout = scout.cli:main
